--- a/AHF_Notes.html
+++ b/AHF_Notes.html
@@ -11,9 +11,9 @@ Reward sizes
 number of entry rewards
 head-fix proportions
 Maybe keep these things in experiment settings as defaults, so if a Mouse is created without these values, it gets the global ones as defaults.</p>
-<p>need better management of mouse data within the program, will want to add images, lever position arrays, other non-text data to mouse. pickle or ome other serializer thing.
-
+<p>need better management of mouse data within the program, will want to add images, lever position arrays, other non-text data to mouse. pickle or some other serializer thing. Where and how is this data stored? 
 </p>
 
+<p>Remote control of AHF program using watchdog (pip3 install watchdog</p>
 </body>
 </html>
